# kptools_build

./: .gitignore  .gitmodules  CMakeLists.kpimg.txt  CMakeLists.kptools.txt  CMakeLists.txt  README.md
.github/workflows/: build-all.yml  release.yml
cmake/: ResetSubmodule.cmake  aarch64-toolchain.cmake
patches/kp/: 0001-build-fix-compile-warnings.patch  0002-tools-fit-windows-ul-ull.patch  0003-temp-fix-Wimplicit-fallthrough-on-main-function.patch  0004-fix-fix-shift-overflow-on-emscripten.patch  0005-cmake-Do-not-link-zlib-in-orig-rules.patch  0005-cmake-Do-not-link-zlib-in-origin-cmake-files.patch
patches/zlib/: 0001-cmake-disable-unused-target.patch
scripts/: get_toolchain.sh
src/: get_kpm_info.cc  web_extra.cc
src/winsup/: CMakeLists.txt  str.c
src/winsup/include/: str_compat.h
